# arhivist

./: .gitignore  INSTALL  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
arhivist/: manage.py
arhivist/api/: base.py  choiser.py  pagination.py  settings.py  template.py  urls.py  views.py
arhivist/api/books/: serializers.py  views.py
arhivist/api/client/: __init__.py  async.py  book.py
arhivist/api/google/: book.py  deco.py  setting.py  settings.py
arhivist/api/tests/: conftest.py  test.json  test_async_books.py  test_books.py
arhivist/api/user/: serializers.py  views.py
arhivist/arhivist/: settings.py  urls.py  wsgi.py
arhivist/books/: apps.py  models.py  permissions.py  quotes.py  serializers.py  settings.py  store.py  urls.py  views.py
arhivist/books/templates/: about.html  api.html  base.html  book.html  books.html  books_list.html  category.html  index.html
arhivist/doc/: arhivist.uml  desc.odt
arhivist/parser/: __init__.py  book.py  executor.py  item.py  logger.py  models.py  settings.py  store.py  tests.py
arhivist/parser/api/: __init__.py  amazon.py  google.py
arhivist/parser/executor/: __init__.py  _executor.py  base.py  book.py  pool.py  template.py
arhivist/parser/old/: _executor.py  asyn.py
arhivist/parser/tests/: asyn_2.py  conftest.py  test_book.py  test_choiser.py  test_executor.py  test_store.py
arhivist/rest_api/: __init__.py  apps.py  urls.py
arhivist/store/: models.py  settings.py
arhivist/tests/: 1  conftest.py  test_parser.py  test_resp.json  test_single_resp.json  tests.py
(+25 files in other folders)
