[flake8]
exclude = build,.git,.tox,./tests/.env, ./arhivist/books/static/thumbnail/*
ignore = W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = rntf
line_length = 79
multi_line_output = 5
not_skip = __init__.py

[metadata]
license-file = LICENSE
